Fix overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,13 @@ body {
 * {
 	font-family: 'Inter';
 	font-style: normal;
+	overflow: scroll;
 }
+
+.bold {
+	font-weight: bolder;
+}
+
 .top-header {
 	background-color: white;
 	position: sticky;
@@ -109,6 +115,9 @@ body {
 .nav-pills .nav-link {
 	color: #000
 }
+.nav-link, .gallery img {
+	cursor: pointer;
+}
 .item-column {
 	position: relative;
 	margin-bottom: 0 !important;
@@ -134,7 +143,14 @@ body {
 	justify-content: center;
 	align-items: center;
 	display: flex;
-	font-size: 24px;
+	font-size: 1.5rem;
+	cursor:pointer;top:50%;background:white;
+}
+.mg-prev {
+	padding-left:20px;
+}
+.mg-next {
+	padding-right:20px;
 }
 
 .quote {
@@ -251,9 +267,7 @@ form textarea {
 }
 input[type="submit"] {
 	margin: auto;
-	border-radius: 10px;
 	text-align: center;
-	width: 8rem;
 	background-color: #65602c;
 	color: #fff;
 	border: none;
@@ -303,12 +317,11 @@ input[type="submit"] {
 		width: 100%;
 		max-width: 100%;
 		height: auto;
-		margin: 2em 0
+		margin: 2em 0;
 	}
 	.service__description{
 		margin-bottom: 1em;
 	}
-
 	#services .container::before{
 		width: 30%;
 		height: 100%;
@@ -357,9 +370,11 @@ input[type="submit"] {
 	#services .container {
 		align-items: center;
 	}
+
 	.service {
 		max-width: 90%;
 	}
+
 	#about, #contact {
 		padding-inline: 2em;
 		padding-block: 2em;
@@ -373,12 +388,18 @@ input[type="submit"] {
 	}
 }
 #main-footer {
-	position: fixed;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 	left: 0;
 	bottom: 0;
 	width: 100%;
 	background-color: #fff;
+	padding: 1.5rem 0 1.5rem 0;
 }
-.main-footer__container {
-	display: flex;
+
+#main-footer > p {
+	max-width: 33%;
+	padding: 0.5rem;
 }
+
